--- a/appinfo.json
+++ b/appinfo.json
@@ -1,7 +1,7 @@
 {
     "appKeys": {},
     "capabilities": [
-        ""
+        "location"
     ],
     "companyName": "ouyang@cs.ucsb.edu",
     "longName": "Earthquake!!",
@@ -10,7 +10,6 @@
         "media": [
             {
                 "file": "images/menu_icon.png",
-                "menuIcon": true,
                 "name": "IMAGE_MENU_ICON",
                 "type": "png"
             },
@@ -28,6 +27,17 @@
                 "file": "fonts/UbuntuMono-Regular.ttf",
                 "name": "MONO_FONT_14",
                 "type": "font"
+            },
+            {
+                "file": "images/mini_icon.png",
+                "menuIcon": true,
+                "name": "IMAGES_MINI_ICON_PNG",
+                "type": "png"
+            },
+            {
+                "file": "images/big_icon.png",
+                "name": "IMAGES_BIG_ICON_PNG",
+                "type": "png"
             }
         ]
     },
